# printdrop

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  ORDER-SEGREGATION-DESIGN.md  PRD.md  README.md  docker-compose.yml  package-lock.json  package.json  railway.toml  render.yaml  vercel.json
backend/: Dockerfile  package.json
backend/src/: config.js  index.js
dashboard/: Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo
dashboard/public/: manifest.json  sw.js
dashboard/src/: middleware.ts
desktop-agent/: .gitignore  README.md  electron-builder.yml  main.js  package-lock.json  package.json  preload.js  setup.ps1
desktop-agent/renderer/: dashboard.css  dashboard.html  dashboard.js  design.css  settings.css  settings.html  settings.js  setup.css  setup.html  setup.js
desktop-agent/scripts/: generate-icons.js
desktop-agent/src/: agent.js  config.js  downloader.js  index.html  job-state.js  logger.js  pdf-utils.js  pending-sync.js  printer.js  processed-jobs.js  security.js  sounds.js  sumatra.js  updater.js
desktop-agent/src-tauri/: Cargo.toml  tauri.conf.json
desktop-agent/src-tauri/src/: agent.rs  lib.rs  main.rs
libreoffice/: Dockerfile  package.json  server.js
print-agent/: .env.example  README.md  ecosystem.config.js  package.json  setup.ps1  setup.sh
print-agent/src/: image-to-pdf.js  index.js  pdf-utils.js  printer.js  processed-jobs.js
prisma/: schema.prisma  seed.js
scripts/: migrate-agent-keys.js  seed-supabase.js  set-shopkeeper-pin.js  setup-supabase.js  smoke-test.js  test-gupshup.js
(+93 files in other folders)
